--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tēla Creation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  Tela Creation
+  
 </body>
 </html>
