added nav and title text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <nav id="home_nav">
+    <div class="nav--container">
+      <ul class="nav_list">
+        <li class="nav_link"><a href="#">About</a></li>
+        <li class="nav_link"><a href="#">Services</a></li>
+        <li class="nav_link"><a href="#">Projects</a></li>
+        <li class="nav_link contact_button"><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <section id="home">
+    <div class="home_container">
+      <div class="home_row">
+        <div class="home_text--container">
+          <h1 class="home_title">TELA CREATION</h1>
+          <p class="home_para">web creation done simple.</p>
+        </div>
+
+        <figure id="logo--wrapper">
+          <img src="" alt="">
+        </figure>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
