added tela logo to home screen, inside a figure element

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <figure id="logo--wrapper">
-          <img src="" alt="">
+          <img src="./assets/Tela_logo.svg" alt="tela logo" class="home_logo">
         </figure>
       </div>
     </div>
