added padding for nav

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <nav id="home_nav">
     <div class="nav--container">
       <ul class="nav_list">
-        <li class="nav_link"><a href="#">About</a></li>
-        <li class="nav_link"><a href="#">Services</a></li>
-        <li class="nav_link"><a href="#">Projects</a></li>
-        <li class="nav_link contact_button"><a href="#">Contact</a></li>
+        <li><a href="#" class="nav_link">About</a></li>
+        <li><a href="#" class="nav_link">Services</a></li>
+        <li><a href="#" class="nav_link">Projects</a></li>
+        <li><a href="#" class="nav_link contact_button">Contact</a></li>
       </ul>
     </div>
   </nav>
