added logo and added animation

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <figure id="logo--wrapper">
           <img src="./assets/Tela_logo.svg" alt="tela logo" class="home_logo">
         </figure>
+
+        <img src="./assets/Ellipse 18.svg" alt="circle" class="home_circle">
       </div>
     </div>
   </section>
