added animations to logo and circles

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </figure>
 
         <img src="./assets/Ellipse 18.svg" alt="circle" class="home_circle">
+        <img src="./assets/Ellipse 18.svg" alt="circle" class="home_circle--2">
       </div>
     </div>
   </section>
