added more animations

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   </nav>
 
   <section id="home">
-    <div class="home_container">
-      <div class="home_row">
+      <div class="row">
         <div class="home_text--container">
           <h1 class="home_title">TELA CREATION</h1>
           <p class="home_para">web creation done simple.</p>
@@ -29,9 +28,22 @@
         <figure id="logo--wrapper">
           <img src="./assets/Tela_logo.svg" alt="tela logo" class="home_logo">
         </figure>
-
+        
         <img src="./assets/Ellipse 18.svg" alt="circle" class="home_circle">
         <img src="./assets/Ellipse 18.svg" alt="circle" class="home_circle--2">
+        <img src="./assets/Ellipse 18.svg" alt="circle" class="home_circle--3">
+      </div>
+  </section>
+  
+  <hr>
+
+  <section id="about">
+    <div class="container">
+      <div class="row">
+
+        <p>Tela <span>[ti:lə]</span></p>
+        <p>Noun</p>
+        <p>meaning web or net</p>
       </div>
     </div>
   </section>
