added name and meaning of name

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <div class="container">
       <div class="row">
 
-        <p>Tela <span>[ti:lə]</span></p>
-        <p>Noun</p>
-        <p>meaning web or net</p>
+        <p>Tela <span class="italic">[ti:lə]</span></p>
+        <p class="italic">Noun</p>
+        <p class="italic">meaning web or net</p>
       </div>
     </div>
   </section>
