--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
         <p>Tela <span class="italic">[ti:lə]</span></p>
         <p class="italic">Noun</p>
         <p class="italic">meaning web or net</p>
+
+        <p class="company_statement">
+          At Tela Creation, we design and develop sleek and responsive web applications for a multitude of industries.
+          From veteran businesses to the new kids on the block. We provide our services to anyone willing to help us 
+          expand the never ending landscape of the web through innovation, design, and creativity.
+        </p>
+
+        <p class="company_statement">
+          But our mission goes beyond the first meeting. We believe in a partnership, a collaboration with businesses to 
+          understand their vision and bringing it to life in the digital realm. We strive to make sure that every business
+          we come across, becomes a long-lasting partner.
+        </p>
+
+        <p class="company_statement">
+          we hope to hear from you soon!
+        </p>
       </div>
     </div>
   </section>
