changed where the last statement will be

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         <p class="company_statement">
           we hope to hear from you soon!
         </p>
+
+        <p class="company_statement--end">
+          - Tela team
+        </p>
       </div>
     </div>
   </section>
