added new shape and rectangle to about section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         <p class="company_statement--end">
           - Tela team
         </p>
+
+        <img src="./assets/tela_shape--1.svg" alt="" class="tela_shape">
+        <img src="./assets/rectangle.svg" alt="" class="rectangle">
       </div>
     </div>
   </section>
