added services and some animation

--- a/index.html
+++ b/index.html
@@ -71,5 +71,42 @@
     </div>
   </section>
 
+  <section id="services">
+    <div class="container">
+      <div class="row">
+        <h2><p class="services_title">SERVICES</p></h2>
+        <p class="services_statement">
+          Just as the wide web is changing, we are also on 
+          the look out for new technologies to insure we 
+          are on the top of innovation. We will always 
+          be expanding our horizons so that we can keep 
+          providing customers new services as time passes by.
+        </p>
+
+        <div class="services--container">
+          <div class="service">
+            <h3>Web Development</h3>
+            <img src="./assets/services_circle.svg" alt="" class="service_circle">
+          </div>
+        </div>
+
+        <div class="services--container">
+          <div class="service">
+            <h3>Graphic Design</h3>
+            <img src="./assets/services_circle.svg" alt="" class="service_circle">
+          </div>
+        </div>
+        
+        <div class="services--container">
+          <div class="service">
+            <h3>Logo Design</h3>
+            <img src="./assets/services_circle.svg" alt="" class="service_circle">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
 </body>
 </html>
