added new portfolio section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section id="services">
     <div class="container">
       <div class="row">
-        <h2><p class="services_title">SERVICES</p></h2>
+        <h2 class="services_title">SERVICES</h2>
         <p class="services_statement">
           Just as the wide web is changing, we are also on 
           the look out for new technologies to insure we 
@@ -104,7 +104,15 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
 
+  <section id="portfolio">
+    <div class="container">
+      <div class="row">
+        <h2 class="services_title">Our</h2>
+        <h2 class="services_title">Portfolio</h2>
+      </div>
     </div>
   </section>
 
