added portfolio container for websites

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
       <div class="row">
         <h2 class="services_title">Our</h2>
         <h2 class="services_title">Portfolio</h2>
+
+        <div class="website--container">
+          <img src="./assets/inju_website--img.png" alt="" class="website_img">
+        </div>
       </div>
     </div>
   </section>
