added a website box for each website image

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
         <h2 class="services_title">Portfolio</h2>
 
         <div class="website--container">
-          <img src="./assets/inju_website--img.png" alt="" class="website_img">
+          <div class="website--box">
+            <img src="./assets/inju_website--img.png" alt="" class="website_img">
+          </div>
         </div>
       </div>
     </div>
