added transition when hovering over projects

--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
         <h2 class="services_title">Portfolio</h2>
 
         <div class="website--container">
+
           <div class="website--box">
             <img src="./assets/inju_website--img.png" alt="" class="website_img">
+            <div class="website_overlay"></div>
           </div>
         </div>
       </div>
