added new animations when hovering over website image

--- a/index.html
+++ b/index.html
@@ -111,6 +111,40 @@
           <div class="website--box">
             <img src="./assets/inju_website--img.png" alt="" class="website_img">
             <div class="website_overlay"></div>
+
+            <div class="website_info--container">
+              <p class="business_name">Inju Korean BBQ</p>
+              <p class="service">Web Development</p>
+            </div>
+            <p class="year">2024</p>
+
+            <a href="#" class="learn_more--btn">Learn More</a>
+          </div>
+
+          <div class="website--box">
+            <img src="./assets/inju_website--img.png" alt="" class="website_img">
+            <div class="website_overlay"></div>
+
+            <div class="website_info--container">
+              <p class="business_name">New Life Painting Services LLC</p>
+              <p class="service">Web Development | Graphic Design</p>
+            </div>
+            <p class="year">2024</p>
+
+            <a href="#" class="learn_more--btn">Learn More</a>
+          </div>
+
+          <div class="website--box">
+            <img src="./assets/inju_website--img.png" alt="" class="website_img">
+            <div class="website_overlay"></div>
+
+            <div class="website_info--container">
+              <p class="business_name">Seoul Blues Cafe</p>
+              <p class="service">Web Development</p>
+            </div>
+            <p class="year">2024</p>
+
+            <a href="#" class="learn_more--btn">Learn More</a>
           </div>
         </div>
       </div>
