--- a/index.html
+++ b/index.html
@@ -146,6 +146,19 @@
 
             <a href="#" class="learn_more--btn">Learn More</a>
           </div>
+
+          <div class="website--box">
+            <img src="./assets/cvpainting_website--img.png" alt="" class="website_img">
+            <div class="website_overlay"></div>
+
+            <div class="website_info--container">
+              <p class="business_name">CV Painting Services LLC</p>
+              <p class="service">Web Development</p>
+            </div>
+            <p class="year">2024</p>
+
+            <a href="#" class="learn_more--btn">Learn More</a>
+          </div>
         </div>
       </div>
     </div>
