added contact email and number

--- a/index.html
+++ b/index.html
@@ -164,5 +164,22 @@
     </div>
   </section>
 
+  <footer>
+    <div class="container">
+      <div class="row footer_row">
+        <ul class="footer_list">
+          <li><a href="#" class="footer_link">Services</a></li>
+          <li><a href="#" class="footer_link">About</a></li>
+          <li><a href="#" class="footer_link">Portfolio</a></li>
+        </ul>
+
+        <ul class="footer_contact--list">
+          <li><a href="#" class="footer_link">contact@telacreation.com</a></li>
+          <li><a href="#" class="footer_link phone_number">240.513.0703</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
