--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
           <li><a href="#" class="footer_link">contact@telacreation.com</a></li>
           <li><a href="#" class="footer_link phone_number">240.513.0703</a></li>
         </ul>
+
+        <img src="./assets/paper_cut.svg" alt="" class="paper_img">
+        <img src="./assets/Tela_logo--hover.svg" alt="" class="tela_logo--footer">
       </div>
     </div>
   </footer>
