took off both images for logo and left the tela logo

--- a/index.html
+++ b/index.html
@@ -178,8 +178,9 @@
           <li><a href="#" class="footer_link phone_number">240.513.0703</a></li>
         </ul>
 
-        <img src="./assets/paper_cut.svg" alt="" class="paper_img">
-        <img src="./assets/Tela_logo--hover.svg" alt="" class="tela_logo--footer">
+        <img src="./assets/Tela_logo.svg" alt="" class="tela_logo--footer">
+
+        <p class="tela_copyright">&copy; 2024 Tela Creation</p>
       </div>
     </div>
   </footer>
