added new ig logo

--- a/index.html
+++ b/index.html
@@ -178,7 +178,13 @@
           <li><a href="#" class="footer_link phone_number">240.513.0703</a></li>
         </ul>
 
-        <img src="./assets/Tela_logo.svg" alt="" class="tela_logo--footer">
+        <div class="tela_socials--container">
+          <img src="./assets/Tela_logo.svg" alt="" class="tela_logo--footer">
+
+          <figure class="logo--container">
+            <img src="./assets/instagram_logo.svg" alt="" class="instagram_logo footer_logo">
+          </figure>
+        </div>
 
         <p class="tela_copyright">&copy; 2024 Tela Creation</p>
       </div>
