added new logos and animation to the logos

--- a/index.html
+++ b/index.html
@@ -181,9 +181,17 @@
         <div class="tela_socials--container">
           <img src="./assets/Tela_logo.svg" alt="" class="tela_logo--footer">
 
-          <figure class="logo--container">
-            <img src="./assets/instagram_logo.svg" alt="" class="instagram_logo footer_logo">
-          </figure>
+          <a href="#">
+            <figure class="logo--container instagram--container">
+              <img src="./assets/instagram_logo.svg" alt="" class="footer_logo">
+            </figure>
+          </a>
+
+          <a href="#">
+            <figure class="logo--container linkedin--container">
+              <img src="./assets/linkedin_logo.svg" alt="" class="footer_logo">
+            </figure>
+          </a>
         </div>
 
         <p class="tela_copyright">&copy; 2024 Tela Creation</p>
