added new logo and added animation

--- a/index.html
+++ b/index.html
@@ -192,6 +192,12 @@
               <img src="./assets/linkedin_logo.svg" alt="" class="footer_logo">
             </figure>
           </a>
+
+          <a href="#">
+            <figure class="logo--container tiktok--container">
+              <img src="./assets/tiktok_logo.svg" alt="" class="footer_logo">
+            </figure>
+          </a>
         </div>
 
         <p class="tela_copyright">&copy; 2024 Tela Creation</p>
