added button element to services for better functionality

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 
         <div class="services--container">
           <div class="service">
-            <h3>Web Development</h3>
+            <button id="web_dev--btn"><h3>Web Development</h3></button>
             <img src="./assets/services_circle.svg" alt="" class="service_circle">
           </div>
         </div>
 
         <div class="services--container">
           <div class="service">
-            <h3>Graphic Design</h3>
+            <button id="graphic_design--btn"><h3>Graphic Design</h3></button>
             <img src="./assets/services_circle.svg" alt="" class="service_circle">
           </div>
         </div>
