--- a/index.html
+++ b/index.html
@@ -85,17 +85,21 @@
 
         <div class="services--container">
           <div class="service">
-            <button id="web_dev--btn"><h3>Web Development</h3></button>
-            <img src="./assets/services_circle.svg" alt="" class="service_circle">
+            <button id="web_dev--btn">
+              <h3>Web Development</h3>
+              <img src="./assets/services_circle.svg" alt="" class="service_circle">
+            </button>
           </div>
-        </div>
-
-        <div class="services--container">
+          
+          
           <div class="service">
-            <button id="graphic_design--btn"><h3>Graphic Design</h3></button>
-            <img src="./assets/services_circle.svg" alt="" class="service_circle">
+            <button id="graphic_design--btn">
+              <h3>Graphic Design</h3>
+              <img src="./assets/services_circle.svg" alt="" class="service_circle">
+            </button>
           </div>
         </div>
+  
       </div>
     </div>
   </section>
