added more services

--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
               <img src="./assets/services_circle.svg" alt="" class="service_circle">
             </button>
           </div>
+
+          <div class="service">
+            <button id="graphic_design--btn">
+              <h3>Marketing</h3>
+              <img src="./assets/services_circle.svg" alt="" class="service_circle">
+            </button>
+          </div>
         </div>
   
       </div>
