added new logos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela Creation</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/2919964776.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav id="home_nav">
@@ -178,41 +179,34 @@
   <footer>
     <div class="container">
       <div class="row footer_row">
+        <img src="./assets/Tela_logo.svg" alt="" class="footer_logo">
+
+        <a href="#" class="phone_number">240.513.0703</a>
+        <a href="#" class="email">contact@telacreation.com</a>
+
         <ul class="footer_list">
-          <li><a href="#" class="footer_link">Services</a></li>
-          <li><a href="#" class="footer_link">About</a></li>
-          <li><a href="#" class="footer_link">Portfolio</a></li>
+          <li><a href="#" class="footer_links">Services</a></li>
+          <li><a href="#" class="footer_links">About</a></li>
+          <li><a href="#" class="footer_links">Projects</a></li>
         </ul>
-
-        <ul class="footer_contact--list">
-          <li><a href="#" class="footer_link">contact@telacreation.com</a></li>
-          <li><a href="#" class="footer_link phone_number">240.513.0703</a></li>
-        </ul>
-
-        <div class="tela_socials--container">
-          <img src="./assets/Tela_logo.svg" alt="" class="tela_logo--footer">
-
-          <a href="#">
-            <figure class="logo--container instagram--container">
-              <img src="./assets/instagram_logo.svg" alt="" class="footer_logo">
-            </figure>
-          </a>
-
-          <a href="#">
-            <figure class="logo--container linkedin--container">
-              <img src="./assets/linkedin_logo.svg" alt="" class="footer_logo">
-            </figure>
-          </a>
-
-          <a href="#">
-            <figure class="logo--container tiktok--container">
-              <img src="./assets/tiktok_logo.svg" alt="" class="footer_logo">
-            </figure>
-          </a>
-        </div>
-
-        <p class="tela_copyright">&copy; 2024 Tela Creation</p>
       </div>
+    </div>
+    <div class="socials_box">
+      <div class="social_media--container">
+        <ul>
+          <li>
+            <a href="#"><i class="fa-brands fa-instagram socials"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-instagram socials"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-instagram socials"></i></a>
+          </li>
+        </ul>
+
+      </div>
+      <p class="tela_copyright">&copy; 2024 Tela Creation</p>
     </div>
   </footer>
 
