changed format of footer

--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
             <a href="#"><i class="fa-brands fa-instagram socials"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram socials"></i></a>
+            <a href="#"><i class="fa-brands fa-tiktok socials"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram socials"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin socials"></i></a>
           </li>
         </ul>
 
