--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tela Creation</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/2919964776.js" crossorigin="anonymous"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
   <nav id="home_nav">
