changes to background color and logo

--- a/index.html
+++ b/index.html
@@ -28,12 +28,8 @@
         </div>
 
         <figure id="logo--wrapper">
-          <img src="./assets/Tela_logo.svg" alt="tela logo" class="home_logo">
+          <img src="./assets/logo.svg" alt="tela logo" class="home_logo">
         </figure>
-        
-        <img src="./assets/Ellipse 18.svg" alt="circle" class="home_circle">
-        <img src="./assets/Ellipse 18.svg" alt="circle" class="home_circle--2">
-        <img src="./assets/Ellipse 18.svg" alt="circle" class="home_circle--3">
       </div>
   </section>
   
