changed logo position

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <figure id="logo--wrapper">
-          <img src="./assets/logo.svg" alt="tela logo" class="home_logo">
+          <img src="./assets/Tela_logo.svg" alt="tela logo" class="home_logo">
         </figure>
       </div>
   </section>
