deleted unused svg's

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </nav>
 
   <section id="home">
+    <img src="./assets/home_page--art.svg" alt="">
       <div class="row">
         <div class="home_text--container">
           <h1 class="home_title">TELA CREATION</h1>
