added nav and links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <section id="home">
+    <nav>
+      <div class="nav_container">
+        <img src="./assets/Tela_logo.svg" alt="" class="tela__logo">
+
+        <ul class="nav_list">
+          <li><button class="color_mode"></button></li>
+          <li><a href="#" class="nav_link">HOME</a></li>
+          <li><a href="#" class="nav_link">SERVICES</a></li>
+          <li><a href="#" class="nav_link">PORTFOLIO</a></li>
+          <li><a href="#" class="nav_link contact_link">CONTACT</a></li>
+        </ul>
+      </div>
+    </nav>
+
+  <header class="title--container">
+    <img src="./assets/tela_creation--title.svg" alt="" class="tela_creation">
+  </header>
+
+
+</section>
 </body>
 </html>
