added circle svg

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img src="./assets/tela_creation--title.svg" alt="" class="tela_creation">
   </header>
 
-
+  <img src="./assets/landing_page--circle.svg" alt="" class="circle_1">
 </section>
 </body>
 </html>
