--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+    <div class="nav_container">
+      <img src="./assets/Tela_logo.svg" alt="" class="tela__logo">
+
+      <ul class="nav_list">
+        <li><button class="color_mode"></button></li>
+        <li><a href="#" class="nav_link">HOME</a></li>
+        <li><a href="#" class="nav_link">SERVICES</a></li>
+        <li><a href="#" class="nav_link">PORTFOLIO</a></li>
+        <li><a href="#" class="nav_link contact_link">CONTACT</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <section id="home">
-    <nav>
-      <div class="nav_container">
-        <img src="./assets/Tela_logo.svg" alt="" class="tela__logo">
-
-        <ul class="nav_list">
-          <li><button class="color_mode"></button></li>
-          <li><a href="#" class="nav_link">HOME</a></li>
-          <li><a href="#" class="nav_link">SERVICES</a></li>
-          <li><a href="#" class="nav_link">PORTFOLIO</a></li>
-          <li><a href="#" class="nav_link contact_link">CONTACT</a></li>
-        </ul>
-      </div>
-    </nav>
-
     <header class="title--container">
     <img src="./assets/tela_creation--title.svg" alt="" class="tela_creation">
     </header>
@@ -29,6 +29,43 @@
     <img src="./assets/landing_page--circle.svg" alt="" class="circle_1">
     <img src="./assets/landing_page--circle2.svg" alt="" class="circle_2">
     <img src="./assets/landing_page--circle2.svg" alt="" class="circle_3">
+  </section>
+
+  <section id="about">
+    <div class="line"></div>
+
+    <div class="container">
+      <div class="row">
+        <h2 class="company_name medium-weight">Tēla <span class="light-weight">[ti:lə]</span></h2>
+        <p>noun</p>
+        <p class="company_meaning">Meaning web or net</p>
+
+        <div class="company_message--container">
+          <p class="company_message">
+            At Tela Creation, we design and develop sleek 
+            and responsive web applications for a multitude of 
+            industries. From veteran businesses to the new kids on 
+            the block. We provide our services to anyone willing to 
+            help us expand the never ending landscape of the web 
+            through innovation, design, and creativity.
+          </p>
+
+          <p class="company_message">
+            But our mission goes beyond the contract. We believe 
+            in a partnership, a collaboration with people to 
+            understand their vision and bringing it to life in the 
+            digital realm. We strive to insure that every person 
+            we come across, becomes a long lasting partner.
+          </p>
+
+          <p class="company_message">
+            Join us on this journey of discovery and transformation, 
+            Together, let's create something extraordinary. Welcome 
+            to Tela Creation.
+          </p>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 </html>
