added circles behind text

--- a/index.html
+++ b/index.html
@@ -60,10 +60,19 @@
 
           <p class="company_message">
             Join us on this journey of discovery and transformation, 
-            Together, let's create something extraordinary. Welcome 
-            to Tela Creation.
+            Together, let's create something extraordinary.
           </p>
         </div>
+      </div>
+    </div>
+
+    <img src="./assets/about_circles.svg" alt="" class="about_section--circles">
+  </section>
+
+  <section id="services">
+    <div class="container">
+      <div class="row">
+        
       </div>
     </div>
   </section>
