added new services section

--- a/index.html
+++ b/index.html
@@ -67,12 +67,15 @@
     </div>
 
     <img src="./assets/about_circles.svg" alt="" class="about_section--circles">
-  </section>
 
-  <section id="services">
-    <div class="container">
-      <div class="row">
-        
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <h1 class="section--header">SERVICES</h1>
+        </div>
+      </div>
+    </section>
+  </section>
       </div>
     </div>
   </section>
