added section for services

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
       <div class="container">
         <div class="row">
           <h1 class="section--header">SERVICES</h1>
+
+          <div class="services--container">
+            <button>Web Development</button>
+            <button>Graphic Design</button>
+            <button>Marketing</button>
+          </div>
         </div>
       </div>
     </section>
