--- a/index.html
+++ b/index.html
@@ -70,14 +70,30 @@
 
     <section id="services">
       <div class="container">
-        <div class="row">
+        <div class="row services_row">
           <h1 class="section--header">SERVICES</h1>
 
           <div class="services--container">
-            <button>Web Development</button>
-            <button>Graphic Design</button>
-            <button>Marketing</button>
+            <button id="web_dev--btn">Web Development</button>
+            <button id="graphic_design--btn">Graphic Design</button>
+            <button id="marketing">Marketing</button>
           </div>
+
+          <p class="services-sub--heading">
+            Just as the wide web is changing, we are also on the 
+            look out for new technologies to insure we are on the 
+            top of innovation. We will always be expanding our 
+            horizons so that we can keep providing customers new 
+            services as time passes by.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section--header">PROJECTS</h1>
         </div>
       </div>
     </section>
