added circles around portfolio section

--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
                 <a href="#" class="project_btn">Learn More</a>
               </div>
             </figure>
+
+            <img src="./assets/filled_circle.svg" alt="" class="portfolio_circle1">
+            <img src="./assets/filled_circle.svg" alt="" class="portfolio_circle2">
+            <img src="./assets/filled_circle.svg" alt="" class="portfolio_circle3">
           </div>
         </div>
       </div>
