added footer with contact info

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <ul class="nav_list">
         <li><button class="color_mode"></button></li>
         <li><a href="#" class="nav_link">HOME</a></li>
-        <li><a href="#" class="nav_link">SERVICES</a></li>
-        <li><a href="#" class="nav_link">PORTFOLIO</a></li>
+        <li><a href="#services" class="nav_link">SERVICES</a></li>
+        <li><a href="#projects" class="nav_link">PORTFOLIO</a></li>
         <li><a href="#" class="nav_link contact_link">CONTACT</a></li>
       </ul>
     </div>
@@ -157,10 +157,20 @@
       </div>
     </section>
 
-    
-  </section>
+    <footer>
+      <div class="container">
+        <div class="row footer_row">
+          <h1 class="footer_title">Ready To Start?</h1>
+          
+          <ul class="contact_info">
+            <li><a href="#" class="email">contact@telacreation.agency</a></li>
+            <li><a href="#" class="number">240.513.0703</a></li>
+          </ul>
+          <button id="footer_contact--btn">Contact Us</button>
+        </div>
       </div>
-    </div>
+    </footer>
+
   </section>
 </body>
 </html>
